--- a/public/index.html
+++ b/public/index.html
@@ -1,1 +1,14 @@
-Hello
+<!DOCTYPE html>
+<html>
+  <head>
+  	<meta charset="utf-8">
+  	<meta name="viewport" content="width=device-width, initial-scale=1">
+  	<title>FCC Project</title>
+  	<link rel="stylesheet" href="./assets/style.css">
+  </head>
+
+  <body>
+    <div id="container"></div>
+    <script src="/js/bundle.js"></script>
+  </body>
+</html>
